fix: add gap above date picker popper

--- a/packages/creation-ui-react/src/index.css
+++ b/packages/creation-ui-react/src/index.css
@@ -26,11 +26,38 @@
 }
 
 .react-datepicker__input-container input {
-  @apply block w-full rounded border border-gray-300 bg-white text-base text-sm shadow-sm md:form-input;
+  @apply rounded-md
+  border
+  border-zinc-400
+  bg-white
+  invalid:border-error-500
+  invalid:ring-error-200
+  focus:border-primary-300
+  focus:ring
+  focus:ring-primary-200
+  focus:ring-opacity-50
+  focus:ring-offset-0
+  focus:invalid:border-error-500
+  focus:invalid:ring-error-200
+  dark:border-zinc-400
+  dark:bg-zinc-900
+  dark:invalid:border-error-400
+  dark:invalid:ring-error-200
+  focus:dark:border-primary-400
+  focus:dark:ring-primary-300;
 }
 
 .react-datepicker-popper {
-  @apply z-40 w-72 rounded border-2 border-gray-200 bg-white px-3 py-2 text-sm shadow;
+  @apply z-40
+   w-72
+   mt-2
+   rounded
+   border-2
+  border-gray-200
+  bg-white
+  px-3 py-2
+  text-sm
+  shadow;
 }
 
 .react-datepicker-left {
